2008-02-04  Noriaki Yamazaki <micro-vnc@ias.hitachi-system.co.jp>
	* libvncserver/zywrletemplate.c: Fix mis encode/decode when
		width != scanline

2008-02-02  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* client_examples/SDLvncviewer.c: fix buttons (2 & 3 were switched),
		fix Tab key, and fix Ctrl+<letter>

2008-01-29  Christian Ehrlicher <Ch.Ehrlicher@gmx.de>
	* libvncserver/rfbserver.c: add missing #include <time.h>

2008-01-28  Noriaki Yamazaki <micro-vnc@ias.hitachi-system.co.jp>
	*  rfb/rfbproto.h, libvncserver/rfbserver.c, libvncserver/scale.c,
	   libvncserver/zrle.c, libvncserver/zrleencodetemplate.c,
	   libvncserver/zywrletemplate.c: add (server-side) ZYWRLE support,
		and fix a few endian/scale errors

2008-01-27  Christian Ehrlicher <Ch.Ehrlicher@gmx.de>
	* CMakeLists, rfb/rfbconfig.h.cmake, rfb/rfbint.h.cmake:
	  support CMake

2007-09-04  Karl Runge <runge@karlrunge.com>
	* classes/ssl: improve timeouts, port fallback, and connection
	  time of the SSL Java viewers.

2007-08-10  Timo Ketola <timo@riihineva.no-ip.org>
	* libvncclient/rfbproto.c: add missing else (so that GotRect
	  handling overrides the default operation).

2007-06-14  Karl Runge <runge@karlrunge.com>
	* configure.ac: add a note on what you must do if you want to
	  re-run autoconf from the LibVNCServer-X.Y.Z.tar.gz tarball.

2007-05-26  Karl Runge <runge@karlrunge.com>
	* configure.ac, Makefile.am, x11vnc/Makefile.am: change 
	  configure to make more of a split between libvncserver and
	  x11vnc packages. LibVNCServer pkg does not include x11vnc.

2007-04-06  Brad Hards <bradh@users.sourceforge.net>
	* rfb/rfbclient.h: use 'extern "C"' to make it convenient to
	  include from C++.

2007-04-05  Alessandro Praduroux <pradu@pradu.it>
	* rfb/rfb.h: do not misplace guards, which makes it possible to
	  double include rfb.h from C++.

2007-03-31  Guillaume Rousse <Guillaume.Rousse@inria.fr>
	* configure.ac, **/Makefile.am: build shared libraries
